[package]
resolver = "2"
authors = ["Luca Lewin <contact@lucalewin.dev>"]
edition = "2021"
name = "sonar"
version = "0.0.1-alpha"
description = "TODO"
license = "MIT"
repository = "https://github.com/lucalewin/sonar"
readme = "README.md"

[dependencies]
bitflags = "2.2.1"
cpal = "0.15.2"
crossbeam-channel = "0.5.8"
dasp_sample = "0.11.0"
dirs = "5.0.1"
flac-bound = { version = "0.3.0", default-features = false, features = [
    "libflac-noogg",
] }
htmlescape = "0.3.1"
if-addrs = "0.10.1"
lexopt = "0.3.0"
log = { version = "0.4.17", features = [ "serde" ] }
once_cell = "1.17.1"
parking_lot = "0.12.1"
serde = { version = "1.0.162", features = ["derive"] }
rand = "0.8.5"
strfmt = "0.2.4"
tiny_http = "0.12.0"
toml = "0.7.3"
ureq = { version = "2.6.2", default-features = false, features = [
    "charset",
    "gzip",
] }
url = "2.3.1"
xml-rs = "0.8.9"
env_logger = "0.10.0"
[target.'cfg(windows)'.dependencies]
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }
[target.'cfg(unix)'.dependencies]
libc = "0.2.144"
